# superidea

./: .flutter_rust_bridge.yml  .gitignore  Cargo.toml  README.md  justfile  pubspec.yaml
.github/: dependabot.yml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
assets/data/: default_text.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: i18n.dart  main.dart  theme.dart
lib/pages/: article_editor_page.dart  article_page.dart  menu_page.dart  tag_page.dart
lib/plugins/cubit/: document_appearance_cubit.dart
lib/plugins/editor_plugins/: editor_style.dart  patterns.dart
lib/plugins/markdown/: document_markdown.dart  document_markdown_decoder.dart
lib/preview_editor/: blockquote_node.dart  code_block_node.dart  editor_controller.dart  heading_node.dart  list_node.dart  span_builder.dart  uo_node.dart  util.dart
lib/preview_editor/markdown_parser/: test_parser.dart
lib/raw_editor/: charcode.dart  controller.dart
lib/raw_editor/nodes/: node.dart
lib/raw_editor/parser/: block.dart  parser.dart  text_parser.dart
lib/widgets/: editor.dart  side_modal_form.dart  side_sheet.dart  warn_modal.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
macos/RunnerTests/: RunnerTests.swift
native.xcodeproj/: project.pbxproj
src/: bridge_generated.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt  rust.cmake
windows/runner/: Runner.rc  main.cpp
(+20 files in other folders)
