[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"

[features]
wasm-start = ["flutter_rust_bridge/wasm-start"]

[build-dependencies]
flutter_rust_bridge_codegen = { version = "1", features = ["chrono", "uuid"] }

[target.'cfg(target_family = "wasm")'.dependencies]
console_log = { version = "1.0", features = ["color"] }
console_error_panic_hook = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
env_logger = "0.10.0"
static_init = "1.0.3"
